# config-hub

./: .env.local  .gitignore  Makefile  README.md  docker-compose.yml  implementation_plan.md  ruff.toml
backend/: .dockerignore  Dockerfile  flagsmith.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a36cfcf238f7_create_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: config.py  environment.py  organization.py  permission.py  product.py  segment.py  setting.py  targeting.py  user.py
backend/app/routers/: audit_log.py  auth.py  configs.py  organizations.py  permissions.py  products.py  sdk.py  segments.py  settings.py  tags.py  webhooks.py
backend/app/schemas/: schemas.py
backend/app/services/: audit.py  auth.py  authz.py  config_json.py  evaluator.py  invites.py  mailer.py  webhook.py
backend/flagsmith_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_invites_and_permissions.py
docs/: FEATURES.md
examples/js-sdk-app/: README.md  package.json  server.js
examples/python-sdk-app/: README.md  app.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: auth-guard.tsx  google-sign-in-button.tsx  personal-settings-dialog.tsx  sidebar.tsx  top-nav.tsx
frontend/src/contexts/: auth-context.tsx  theme-context.tsx
frontend/src/lib/: api.ts  dashboard-context.ts  types.d.ts
(+17 files in other folders)
